Add a working ONNX embedding provider, and use it in demo-mini
The jlama provider does not work. It loads BAAI/bge-small-en-v1.5 without error and
reports 384 dimensions, but the vectors are not the model's output: against a
reference BERT forward pass over the same model.safetensors and the same token ids
from Jlama's own tokenizer, its vector for a given text has cosine -0.06 with the
correct one under its default MODEL pooling, and 0.27 at best across its four
pooling modes. Unrelated documents come out nearer than related ones.

Not a configuration problem. The tokenizer emits correct WordPiece ids, F32/F32 and
F32/I8 working dtypes are bit-identical, every pooling mode is wrong, and the same
weights behave correctly under both the numpy reference and ONNX Runtime. 0.8.4 is
the latest release. Nothing throws, so this is precisely the silent "confident
garbage" failure 03-configuration.md warns about for a model mismatch, arriving
through the engine instead.

So: a second provider, "onnx", running the forward pass through ONNX Runtime. Its
output matches the reference to four decimal places and is roughly an order of
magnitude faster. Tokenisation still uses Jlama's BertTokenizer — it was verified
correct and is pure Java, so reusing it avoids a second native dependency; only the
forward pass moves.

Pooling is per-model and silently wrong if guessed (BGE pools CLS, E5 and MiniLM
average), so it is inferred from the model name and overridable, as are the
asymmetric query/document prefixes. Model files are fetched to idx:modelPath and
written through a .part file so an interrupted download cannot leave something that
looks complete. No --add-modules jdk.incubator.vector: that was a Jlama constraint,
and so was the encoder-only-BERT restriction — anything with an ONNX export now works.

demo-mini switches to it, and its semantic examples are now queries that share no
words with what they find: "a coffee flavoured Italian pudding" returns Tiramisu
(espresso, mascarp